Updates content for at-resume-tech.tex template

--- a/templates/resume/ats-resume-tech.tex
+++ b/templates/resume/ats-resume-tech.tex
@@ -54,22 +54,17 @@
 
 \begin{document}
 
-\begin{center}
-  \textbf{\Huge Alex Webb} \\
-  \small 555-123-4567 $|$ \href{mailto:alex@email.com}{alex@email.com} $|$ 
-  \href{https://linkedin.com/in/burhan-webb}{linkedin.com/in/alexwebbx} $|$
-  \href{https://github.com/zwayth}{github.com/alexwebbx}
-\end{center}
+\input{content/resume/Personal-info.tex}
 
-\section*{Summary}
-Passionate AI/ML engineer with a strong background in deep learning, computer vision, and natural language processing. Skilled in Python, TensorFlow, PyTorch, and various ML libraries. Excellent problem-solving, research, and collaboration abilities. Seeking a challenging role to develop cutting-edge AI solutions.
+\input{content/resume/Statement.tex}
 
 \section{Technical Skills}
 \resumeSubHeadingList
-  \resumeItem{\textbf{Programming Languages}: Python, C++, SQL, MATLAB}
+  \resumeItem{\textbf{Programming Languages}: Python, R, SQL, TypeScript, TeX}
   \resumeItem{\textbf{Deep Learning Frameworks}: TensorFlow, PyTorch, Keras, Caffe}
   \resumeItem{\textbf{Libraries \& Tools}: NumPy, Pandas, Scikit-learn, OpenCV, NLTK, Git, Docker}
-\resumeSubHeadingListEnd
+ \resumeSubHeadingListEnd
+
 
 \section{Projects}
 \resumeSubHeadingList
@@ -111,15 +106,20 @@ Passionate AI/ML engineer with a strong background in deep learning, computer vi
       \resumeSubHeadingListEnd
 \resumeSubHeadingListEnd
 
-\section{Education}
-\resumeSubHeadingList
-  \resumeSubheading
-      {Stanford University}{Stanford, CA}
-      {M.S. in Computer Science, Artificial Intelligence}{Aug 2019 -- May 2021}
-  \resumeSubheading
-      {University of California, Berkeley}{Berkeley, CA}
-      {B.S. in Electrical Engineering and Computer Science}{Aug 2015 -- May 2019}
-\resumeSubHeadingListEnd
+%\section{Education}
+%\resumeSubHeadingList
+%  \resumeSubheading
+%      {Stanford University}{Stanford, CA}
+%      {M.S. in Computer Science, Artificial Intelligence}{Aug 2019 -- May 2021}
+%  \resumeSubheading
+%      {University of California, Berkeley}{Berkeley, CA}
+%      {B.S. in Electrical Engineering and Computer Science}{Aug 2015 -- May 2019}
+%\resumeSubHeadingListEnd
+
+\input{content/resume/Education}
+
+
+
 
 \section{Certifications}
 \resumeSubHeadingList
