--- a/templates/resume/resume.tex
+++ b/templates/resume/resume.tex
@@ -30,8 +30,7 @@
 \contactline{Email: john.smith@email.com}{Phone: (555) 555-5555}
 {Location: New York, NY}{LinkedIn: linkedin.com/in/johnsmith}
 
-\section{Professional Summary}
-Results-driven Software Engineer with 5+ years of experience in full-stack development. Specialized in developing scalable web applications using modern technologies and best practices. Proven track record of delivering high-quality solutions while adhering to project timelines and requirements.
+\input{content/resume/Statement.tex}
 
 \section{Professional Experience}
 
