Adds content for all resume sections

--- a/content/resume/Statement.tex
+++ b/content/resume/Statement.tex
@@ -1,8 +1,5 @@
 \section{Personal statement}
-As a skilful programmer, I have transitioned to leveraging my technical skills to produce meaningful outcomes that drive decision-making. 
-Currently, I am thriving in my role as Kaitātari Hoahoa | Design Analyst at Tatauranga Aotearoa, StatsNZ. 
-In my current role, I utilize my expertise in R, SQL, and Python to tackle complex data challenges. 
+As a skilful programmer, I leverage my technical skills to produce meaningful outcomes that drive decision-making. 
 I am passionate about using code to find innovative solutions to data problems.
 One of the most enticing aspects of my work is data visualization, where I can transform intricate datasets into clear, actionable insights. 
-I manage and maintain our shinyapps.io service and GitHub platform, ensuring seamless functionality and user experience for our RShiny applications.
-In my role, I collaborate with cross-functional teams to understand data needs and deliver solutions that support data-driven decisions. 
+I currently work as Kaitātari Hoahoa | Design Analyst at Tatauranga Aotearoa, StatsNZ. In this role, I manage and maintain our shinyapps.io service and GitHub platform, ensuring seamless functionality and user experience for our RShiny applications.
