Adds url for GitHub projects

--- a/content/resume/Projects.tex
+++ b/content/resume/Projects.tex
@@ -3,6 +3,7 @@
 \resumeSubheading
       {Potfolio showcase - PenguinOps}{Aug 2025 -- Present} 
       {PenguinOps is a simple, clean, beginner-friendly portfolio template}{once-ui, TypeScript, MDX, JavaScript}
+      {\href{https://github.com/nrob536/penguinops}{https://github.com/nrob536/penguinops}}
       \resumeSubHeadingList
           \resumeItem{\textbullet\ Built a dynamic website based on once-ui and TypeScript}
           \resumeItem{\textbullet\ Deployed the website via vercel, a cloud platform for easy integration}
@@ -11,6 +12,7 @@
       \resumeSubheading
       {Financial Analysis Python Module}{Jul 2025 -- Present} 
       {A comprehensive Python module for financial data analysis}{Python, flask}
+      {\href{https://github.com/nrob536/fapi-module}{https://github.com/nrob536/fapi-module}}
       \resumeSubHeadingList
           \resumeItem{\textbullet\ Building a RESTful API for data analysis of financial markets}
           \resumeItem{\textbullet\ Implementing flask Python framework to build web application}
@@ -18,6 +20,7 @@
   \resumeSubheading
       {Git Fantasy Quest}{Aug 2024 -- Present}
       {A repository to test your Git skills through a series of unsupervised challenges.}{Git, GitHub}
+      {\href{https://github.com/nrob536/git-fantasy-quest}{https://github.com/nrob536/git-fantasy-quest}}
       \resumeSubHeadingList
           \resumeItem{\textbullet\ Developed an a repository for learning Git command and best practices fro code collaboration.}
       \resumeSubHeadingListEnd  
