Adds content for application with Natural Harzards Commission

--- a/content/cover-letter/body.tex
+++ b/content/cover-letter/body.tex
@@ -1,17 +1,26 @@
-I am writing to express my interest in the \textbf{Design Analyst} position (Reference {\#}: 15869) at Tatauranga Aotearoa - Stats NZ. Over the past two years in the public service, I have successfully delivered innovative data analytics solutions, led capability building across teams, and contributed to high-profile statistical products. Examples of this are the \textbf{Employment Stocks and Flows} (ESF) series and the \textbf{New Zealand Activity Index} (NZAC). These experiences have strengthened my expertise in economic data pipelines.
+I am writing to express my interest in the \textbf{Senior Loss Modelling Analyst} position (\textit{Reference #: 29950}) at 
+\textit{Natural Hazards Commission — Toka Tū Ake}.
+I hold a PhD in Biological Sciences from the University of Auckland. I will bring over five years of experience in data analytics,
+modelling, and risk-related projects across government and science agencies. I am passionate about delivering high-quality,
+defensible analysis that informs resilience, readiness, and recovery.
 
-As a Kaitātari Hoahoa | Design Analyst at Stats NZ, I have:
+In my current role as \textbf{Kaitātari Hoahoa (Design Analyst)} at \textit{Tatauranga Aotearoa — Stats NZ}, I lead the development 
+of analytical tools, R packages, dashboards, and workflows that transform complex datasets into actionable insights for policy and
+operational teams. I have managed and optimised large-scale data environments, including administering 200+ R Shiny applications, 
+and have contributed to national statistical outputs such as census population modelling. 
+My experience at \textit{National Institute of Atmospheric Research (NIWA)} as both a \textbf{Climate Database Technician} and 
+\textbf{Molecular Biologist} further  strengthened my ability to design and refine models, ensure data quality, 
+and communicate results to diverse stakeholders.
 
-\begin{itemize}
-    \item Collaborated on the ESF and NZAC pipelines, optimising R-based workflows and implementing quality assurance processes that improved efficiency and reduced manual intervention.
-    \item Developed and maintained reusable R packages and automated dashboards, lifting capability across Stats NZ’s analytical community and reducing duplicated effort across teams.
-    \item Mentored analysts in R, Git workflows, and reproducible practices, fostering a culture of knowledge-sharing and helping new staff rapidly upskill.
-    \item Supported enterprise-wide data products like \textbf{Nga Tūtohu Aotearoa – Indicators Aotearoa New Zealand} and the \textbf{COVID-19 Data Portal}, ensuring high-quality, transparent statistical outputs.
-\end{itemize}
+I bring proficiency in \textbf{Python, R, SQL,} and \textbf{geospatial analysis}, with a strong background in scenario modelling and data visualisation.
+My academic and professional work has required synthesising complex model outputs into clear, actionable recommendations, aligning 
+closely with the responsibilities of this role. I also have a proven track record of collaborating across agencies, having worked 
+on multi-stakeholder projects in climate science, biosecurity, and environmental monitoring.
 
-\noindent These achievements demonstrate that I can provide expert advice, champion methodological improvements, and build capability across the data ecosystem. I am committed to continue delivering innovative, high-quality design solutions for Stats NZ.
+The values of hononga, māhirahira, and māia strongly resonate with both my personal and professional approach.
+I believe meaningful outcomes start with connection, and I have consistently built strong, respectful relationships across
+teams and agencies to ensure complex insights are accessible and actionable. My career has been driven by curiosity, 
+from developing innovative ecological models during my PhD to adopting new tools like Python to expand my analytical capabilities.
+I also bring confidence grounded in my ability to produce robust outcomes to inform decisions that impact communities across Aotearoa.
 
-\noindent My approach to leadership and collaboration is guided by the whakataukī \textbf{“He waka eke noa”} — we are all in this together. This principle shapes how I work, mentor, and contribute to the public service: fostering unity, shared responsibility, and a culture where we collectively navigate challenges and succeed together.
-
-\noindent I welcome the opportunity to bring my experience, values, and results-driven mindset to this role and help strengthen Stats NZ’s analytical capability.
-
+I would welcome the opportunity to discuss how my skills and experience can support your strategic objectives.
