--- a/content/resume/Publications.tex
+++ b/content/resume/Publications.tex
@@ -1,3 +1,3 @@
 \section{Publications}
-Throughout my science career, I have authored more than 10 publications in peer-reviewed, conference proceedings and journals. For a detailed list of publications; see Google Scholar profile: 
+Throughout my science career, I have authored more than 10 publications in peer-reviewed, conference proceedings and journals. For a detailed list of publications; see Google Scholar profile:\\ 
 \href{https://scholar.google.com/citations?user=xEkdkFkAAAAJ&hl=da}{https://scholar.google.com/citations?user=xEkdkFkAAAAJ&hl=da}
