--- a/content/resume/Statement.tex
+++ b/content/resume/Statement.tex
@@ -1,5 +1,8 @@
 \section{Personal statement}
-As a skilful programmer, I leverage my technical skills to produce meaningful outcomes that drive decision-making. 
-I am passionate about using code to find innovative solutions to data problems.
-One of the most enticing aspects of my work is data visualization, where I can transform intricate datasets into clear, actionable insights. 
-I currently work as Kaitātari Hoahoa | Design Analyst at Tatauranga Aotearoa, StatsNZ. In this role, I manage and maintain our shinyapps.io service and GitHub platform, ensuring seamless functionality and user experience for our RShiny applications.
+Analytical and solutions focused data professional with a PhD in Biological Sciences and over five years of experience delivering
+high quality modelling, analytics, and insights in government and science agecnies. Skilled in Python, R, SQL, and geospatial analysis,
+with a proven ability to develop robust models, refine complex datasets, and translate technical outputs into actionable policy.
+Experienced in managing multi stakeholder projects across climate science, biosecurity, and population statistics, and in administering
+large-scale data environments, including 200+ R Shiny applications. Recognised for building strong relationships (hononga),
+driving innovation through curiosity (māhirahira), and delivering with confidence (māia) to support evidence-based policy 
+and resilience initiatives for Aotearoa’s communities.
