--- a/templates/resume/ats-resume-tech.tex
+++ b/templates/resume/ats-resume-tech.tex
@@ -1,4 +1,4 @@
-\documentclass[letterpaper,10pt]{article}
+\documentclass[letterpaper,11pt]{article}
 
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
@@ -11,6 +11,7 @@
 \usepackage{fancyhdr}
 \usepackage[english]{babel}
 \usepackage{tabularx}
+\usepackage[document]{ragged2e}
 \input{glyphtounicode}
 
 % Font options
