--- a/content/resume/Projects.tex
+++ b/content/resume/Projects.tex
@@ -2,26 +2,27 @@
 \resumeSubHeadingList
 \resumeSubheading
       {Potfolio showcase - PenguinOps}{Aug 2025 -- Present} 
-      {PenguinOps is a simple, clean, beginner-friendly portfolio template}{once-ui, TypeScript, MDX, JavaScript}
-      {\href{https://github.com/nrob536/penguinops}{https://github.com/nrob536/penguinops}}
+      {PenguinOps is a simple, clean, beginner-friendly portfolio template}{once-ui, TypeScript, MDX, JavaScript}\\
       \resumeSubHeadingList
+          \resumeItem{\href{https://github.com/nrob536/penguinops}{https://github.com/nrob536/penguinops}}
           \resumeItem{\textbullet\ Built a dynamic website based on once-ui and TypeScript}
           \resumeItem{\textbullet\ Deployed the website via vercel, a cloud platform for easy integration}
       \resumeSubHeadingListEnd
 
       \resumeSubheading
       {Financial Analysis Python Module}{Jul 2025 -- Present} 
-      {A comprehensive Python module for financial data analysis}{Python, flask}
-      {\href{https://github.com/nrob536/fapi-module}{https://github.com/nrob536/fapi-module}}
+      {A comprehensive Python module for financial data analysis}{Python, flask}\\
       \resumeSubHeadingList
+          \resumeItem{\href{https://github.com/nrob536/fapi-module}{https://github.com/nrob536/fapi-module}}
           \resumeItem{\textbullet\ Building a RESTful API for data analysis of financial markets}
           \resumeItem{\textbullet\ Implementing flask Python framework to build web application}
       \resumeSubHeadingListEnd
   \resumeSubheading
       {Git Fantasy Quest}{Aug 2024 -- Present}
-      {A repository to test your Git skills through a series of unsupervised challenges.}{Git, GitHub}
-      {\href{https://github.com/nrob536/git-fantasy-quest}{https://github.com/nrob536/git-fantasy-quest}}
+      {A repository to test your Git skills through a series of unsupervised challenges.}{Git, GitHub}\\
+      
       \resumeSubHeadingList
+          \resumeItem{\href{https://github.com/nrob536/git-fantasy-quest}{https://github.com/nrob536/git-fantasy-quest}}
           \resumeItem{\textbullet\ Developed an a repository for learning Git command and best practices fro code collaboration.}
       \resumeSubHeadingListEnd  
 \resumeSubHeadingListEnd
